# Dell-G-Series-Controller

./: .gitignore  50-dell-acpi-nopasswd.rules  99-dell-g-series.rules  Cargo.toml  README.md  package-lock.json  package.json  setup-acpi.sh
dell-core/: Cargo.toml
dell-core/src/: acpi.rs  elc.rs  elc_constants.rs  hid_report.rs  keyboard.rs  lib.rs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: hotkey_monitor.rs  lib.rs  main.rs
src/app/components/: ColorPicker.tsx  FanControl.tsx  Footer.tsx  Header.tsx  KeyboardControl.tsx  LedModeSelector.tsx  PowerControl.tsx  SensorDisplay.tsx  SetupBanner.tsx
src/app/constants/: colors.ts
src/app/hooks/: useAutostart.ts  useDeviceSetup.ts  usePersistedSettings.ts
src/app/types/: index.ts
