[workspace]
resolver = "2"
members = ["dell-core", "src-tauri", "test_fans", "test_manual"]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Jose"]
license = "MIT"

[workspace.dependencies]
# Core dependencies
rusb = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"

# Tauri dependencies
tauri = { version = "1.8", features = ["shell-open"] }
tauri-build = "1.5"
