[package]
name = "dell-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "dell_core"
path = "src/lib.rs"

[dependencies]
rusb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = "1.0"
thiserror = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
