[package]
name = "dell-gui-tauri"
version = "1.0.0"
description = "Dell G Series Controller"
authors = ["Jose"]
edition = "2021"

[lib]
name = "dell_gui_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dell-core = { path = "../dell-core" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
