[package]
name = "dell-gui-tauri"
version = "1.0.0"
description = "Dell G Series Controller"
authors = ["Jose"]
edition = "2021"

[lib]
name = "dell_gui_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
dell-core = { path = "../dell-core" }
tauri = { version = "2.10.2", features = ["tray-icon"] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-shell = "2.3.5"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-notification = "2.3.3"
tauri-plugin-single-instance = "2.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.101"
log = "0.4.29"
env_logger = "0.11.8"
evdev = "0.12"
